--- a/ab-log-rc/_Imports.razor
+++ b/ab-log-rc/_Imports.razor
@@ -13,3 +13,5 @@
 @using SharedLib;
 @using Microsoft.EntityFrameworkCore
 @using ab.context
+@using RazorLib.Shared.hardwares
+@using RazorLib.Shared.settings
