--- a/RazorLib/Shared/MqttConfigBodyComponent.razor
+++ b/RazorLib/Shared/MqttConfigBodyComponent.razor
@@ -1,11 +1,4 @@
-﻿@using MudBlazor;
-@using SharedLib;
-
-@inherits BlazorBusyComponentBaseModel
-
-@inject IParametersStorageService _storage
-@inject IToolsService _tools
-@inject ISnackbar Snackbar
+﻿@inherits BlazorBusyComponentBaseModel
 
 <div class="card">
     <div class="card-body">
@@ -110,86 +103,3 @@
         </EditForm>
     </div>
 </div>
-
-@code {
-    MqttConfigModel conf = new();
-    MqttConfigModel conf_self = new();
-    private EditContext? editContext;
-    bool IsEdit => conf != conf_self;
-    bool ShowSecret = false;
-    bool ShowPassword = false;
-
-    bool ServiceIsRunning = false;
-
-    protected override async Task OnInitializedAsync()
-    {
-        editContext = new(conf);
-        IsBusyProgress = true;
-        MqttConfigResponseModel res = await _storage.GetMqttConfig();
-        Snackbar.ShowMessagesResponse(res.Messages);
-        if (!res.IsSuccess || res.Conf is null)
-        {
-            IsBusyProgress = false;
-            return;
-        }
-        conf = res.Conf;
-        editContext = new(conf);
-        conf_self = GlobalStatic.CreateDeepCopy(conf);
-
-        await GetStatusService();
-
-        IsBusyProgress = false;
-    }
-
-    async Task GetStatusService()
-    {
-        BoolResponseModel status = await _tools.StatusMqtt();
-        ServiceIsRunning = status.Response;
-        Snackbar.ShowMessagesResponse(status.Messages);
-    }
-
-    async Task StopService()
-    {
-        IsBusyProgress = true;
-        ResponseBaseModel stop_res = await _tools.StopMqtt();
-        Snackbar.ShowMessagesResponse(stop_res.Messages);
-        await GetStatusService();
-        IsBusyProgress = false;
-    }
-
-    async Task RestartService()
-    {
-        IsBusyProgress = true;
-        ResponseBaseModel start_res = await _tools.StartMqtt();
-        Snackbar.ShowMessagesResponse(start_res.Messages);
-        await GetStatusService();
-        IsBusyProgress = false;
-    }
-
-    async Task SaveConfMqtt()
-    {
-        bool? validate = editContext?.Validate();
-        if (validate != true)
-        {
-            Snackbar.Add("Форма не заполнена!", Severity.Warning, conf => conf.DuplicatesBehavior = SnackbarDuplicatesBehavior.Allow);
-            return;
-        }
-
-        IsBusyProgress = true;
-        ResponseBaseModel res = await _storage.SaveMqttConfig(conf);
-        Snackbar.ShowMessagesResponse(res.Messages);
-
-        if (res.IsSuccess)
-            conf_self = GlobalStatic.CreateDeepCopy(conf);
-
-        IsBusyProgress = false;
-    }
-
-    async Task TestConnect()
-    {
-        IsBusyProgress = true;
-        ResponseBaseModel res = await _tools.TestMqttConnect(conf);
-        Snackbar.ShowMessagesResponse(res.Messages);
-        IsBusyProgress = false;
-    }
-}
