--- a/RazorLib/Shared/html/HtmlFormTranslatorComponent.razor
+++ b/RazorLib/Shared/html/HtmlFormTranslatorComponent.razor
@@ -26,7 +26,7 @@
 
 @code {
     [Parameter, EditorRequired]
-    public HtmlDomTreeItemDataModel NodeData { get; set; } = default!;
+    public required HtmlDomTreeItemDataModel NodeData { get; set; }
 
     [CascadingParameter]
     public int? Id { get; set; }
