--- a/ab-log.web/Components/Pages/HardwareConfigPage.razor
+++ b/ab-log.web/Components/Pages/HardwareConfigPage.razor
@@ -8,7 +8,7 @@
             <HardwareFormComponent />
         </TabComponent>
         <TabComponent Tooltip="Ретранслятор" Title="Ретранслятор">
-            <HardwareTranslateMainLayerComponent />
+            <HardwareTranslateMainLayerComponent PagePath="/" />
         </TabComponent>
     </TabSetComponent>
 </CascadingValue>
