--- a/RazorLib/Shared/SelectActionCommand/Controller/ControllerSelectorComponent.razor
+++ b/RazorLib/Shared/SelectActionCommand/Controller/ControllerSelectorComponent.razor
@@ -36,16 +36,16 @@ else if (CurrentCommand?.CommandType == TypesCommandsEnum.Controller)
     /// Перечень доступных контролеров вместе со своими портами
     /// </summary>
     [Parameter, EditorRequired]
-    public EntryNestedModel[] EntriesTreeHW { get; set; } = default!;
+    public required EntryNestedModel[] EntriesTreeHW { get; set; }
 
     [Parameter, EditorRequired]
-    public Action ControllerActionHandler { get; set; } = default!;
+    public required Action ControllerActionHandler { get; set; }
 
     /// <summary>
     /// Команда
     /// </summary>
     [Parameter, EditorRequired]
-    public CommandModelDB CurrentCommand { get; set; } = default!;
+    public required CommandModelDB CurrentCommand { get; set; }
 
     public int SelectedControllerId
     {
