--- a/RazorLib/Shared/navs/pills/PillComponent.razor
+++ b/RazorLib/Shared/navs/pills/PillComponent.razor
@@ -29,7 +29,7 @@
     public Action OnClickHandle { get; set; } = () => { };
 
     [Parameter, EditorRequired]
-    public RenderFragment ChildContent { get; set; } = default!;
+    public required RenderFragment ChildContent { get; set; }
 
     private string? TitleCssClass =>
         ContainerTabSet?.ActiveTab == this ? "active" : IsDisabled ? "disabled" : null;
