--- a/RazorLib/Shared/settings/SystemCommandDeleteButtonsComponent.razor
+++ b/RazorLib/Shared/settings/SystemCommandDeleteButtonsComponent.razor
@@ -19,7 +19,7 @@
     public int CommandId { get; set; }
 
     [Parameter, EditorRequired]
-    public Action UpdateCommandsList { get; set; } = default!;
+    public required Action UpdateCommandsList { get; set; }
 
     bool IsInitDelete = false;
 
